# computer-vision-teams

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  01_data_cam.ipynb  01_data_imgs.ipynb  02_trainer.ipynb  02_trainer_other.ipynb  02_trainer_tf.ipynb  03_predict.ipynb  99_teams_interaction.ipynb  ENV2.yml  env.yml  handDetector.py  main.ipynb  notes.txt  pyproject.toml  readme.md
models/: classifier.hdf5  lite.hdf5
src/: handDetector.py  hands_finder.py  teams_interaction.py  video_utils.py
