[tool.black]
line-length = 79

[tool.poetry]
name = "computer-vision-teams"
version = "0.1.0"
description = ""
authors = ["FedericoMontana <federico.montanana@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mediapipe = "^0.8.10"
pandas = "^1.4.3"
opencv-python = "^4.6.0"
tensorflow = "^2.9.1"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
